# azh_std

./: .gitignore  CMakeLists.txt
cmake/: AZH_Library-Config.cmake.in
include/azh/: define.hpp  exception.hpp  logger.hpp  timer.hpp  timer_thread.hpp  version.hpp
src/: timer_thread.cpp
tests/: CMakeLists.txt
tests/exception/: CMakeLists.txt  main.cpp
tests/logger/: CMakeLists.txt  main.cpp
tests/timer/: CMakeLists.txt  main.cpp
tests/timer_thread/: CMakeLists.txt  main.cpp
